--- a/includes/modal.html
+++ b/includes/modal.html
@@ -22,33 +22,19 @@
                                 Project Title
                             </h2>
                             <hr class="star-primary">
-                                <p>
-                                </p>
+                                <p></p>
                                 <ul class="list-inline item-details">
                                     <li>
                                         Client:
-                                        <strong>
-                                            <a href="https://startbootstrap.com">
-                                                Start Bootstrap
-                                            </a>
-                                        </strong>
-                                    </li>
-                                    <li>
-                                        Date:
-                                        <strong>
-                                            <a href="https://startbootstrap.com">
-                                                April 2014
-                                            </a>
-                                        </strong>
-                                    </li>
+                                        <strong id="project-client"></strong>
+                                    </li>                                    
                                     <li>
                                         Service:
                                         <strong>
-                                            <a href="https://startbootstrap.com">
-                                                Web Development
-                                            </a>
+                                            Web Development
                                         </strong>
                                     </li>
+                                    <li id="project-tags"><span class="label label-warning">Tags: </span></li>
                                 </ul>
                             </hr>
                         </div>
