--- a/includes/modal.html
+++ b/includes/modal.html
@@ -23,7 +23,7 @@
                             </h2>
                             <hr class="star-primary">
                                 <p></p>
-                                <ul class="list-inline item-details">
+                                <!--<ul class="list-inline item-details">
                                     <li>
                                         Client:
                                         <strong id="project-client"></strong>
@@ -35,7 +35,7 @@
                                         </strong>
                                     </li>
                                     <li id="project-tags"><span class="label label-warning">Tags: </span></li>
-                                </ul>
+                                </ul>-->
                             </hr>
                         </div>
                         <div class="col-lg-8 col-lg-offset-2">
