--- a/includes/modal.html
+++ b/includes/modal.html
@@ -24,7 +24,7 @@
                             <hr class="star-primary">
                                 <p>
                                 </p>
-                                <ul class="list-inline item-details">
+                                <!--<ul class="list-inline item-details">
                                     <li>
                                         Client:
                                         <strong>
@@ -49,7 +49,7 @@
                                             </a>
                                         </strong>
                                     </li>
-                                </ul>
+                                </ul>-->
                             </hr>
                         </div>
                         <div class="col-lg-8 col-lg-offset-2">
